@@ -23,8 +23,10 @@ directory=examples
 
 [Prereqs]
 Moose = 2.2006
+Moo = 2
 MooX::Options = 4.103
 MooseX::Traits::Pluggable = 0.12
+MooX::Attribute::ENV = 0
 Type::Tiny = 1.004004
 DBIx::Class::DeploymentHandler = 0.002223
 DBIx::Class::Schema::Loader = 0.07042
@@ -36,7 +38,6 @@ File::Copy = 0
 File::Path = 0
 File::Temp = 0
 File::ShareDir::ProjectDistDir = 1.000004
-MooseX::Attribute::ENV = 0.02
 Devel::PartialDump = 0.17
 DBD::SQLite = 1.46
 Pod::Parser = 1.63
