@@ -3,6 +3,7 @@ Revision history for DBIx-Class-Migration.
 0.068   
         - convert to Type::Tiny
         - convert to MooX::Options
+        - convert to MooX::Attribute::ENV
 
 0.067   2019-03-14
         - zap redundant RE bit that confuses 5.8.9
